# Instaagent

./: LICENSE  Readme.md
instaagent/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
instaagent/knowledge/: user_preference.txt
instaagent/src/instaagent/: crew.py  main.py
instaagent/src/instaagent/config/: agents.yaml  tasks.yaml
instaagent/src/instaagent/tools/: __init__.py  auth_tools.py  content_tools.py  subscription_tools.py
