[project]
name = "instaagent"
version = "0.1.0"
description = "instaagent using crewAI"
authors = [{ name = "Shubham Lal", email = "slal495@yahoo.com" }]
requires-python = ">=3.10,<3.13"
license = {text = "MIT"}
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
instaagent = "instaagent.main:run"
run_crew = "instaagent.main:run"
train = "instaagent.main:train"
replay = "instaagent.main:replay"
test = "instaagent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
